src/objects/Student_Skill__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Point__c</fullName>
        <label>SPoint</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Skill__c</fullName>
        <label>Skill</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Skill_List</valueSetName>
        </valueSet>
    </fields>
    <label>Student Skill</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SK-{0000}</displayFormat>
        <label>Student Skill Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>